Fix editor button z-index

--- a/src/renderer/pages/Pile/Editor/Editor.module.scss
+++ b/src/renderer/pages/Pile/Editor/Editor.module.scss
@@ -196,6 +196,8 @@
   .right {
     display: flex;
     align-items: center;
+    z-index: 10;
+    position: relative;
 
     .button {
       display: flex;
